# SandPrinter

./: .gitignore  .gitmodules  CMakeLists.txt  Plotter.cpp  README.md  disp.h
files/: config.txt
src/: ErrorHandler.hpp  Plotter.cpp.old  main.cpp
src/bmp/: Bmp.cpp  Bmp.hpp  CmykConverter.hpp  Pixel.hpp  bmp_structs.hpp
src/brush/: Brush.hpp
src/button/: Button.cpp  Button.hpp
src/color/: ColorModels.hpp  ColorScaler.cpp  ColorScaler.hpp
src/config/: Constants.hpp  DynamicConstants.cpp  DynamicConstants.hpp  StaticConsts.cpp
src/debug/: DebugMessage.hpp  ErrorHandler.hpp  ErrorMessages.hpp
src/display/: Display.cpp  Display.hpp  display_hw.h
src/gpio/: FakeGpio.hpp  Gpio.cpp  Gpio.hpp
src/leds/: StatusLed.cpp  StatusLed.hpp
src/motor/: Motor.cpp  Motor.hpp
src/plotter/: Autoposition.cpp  Autoposition.hpp  BrushController.cpp  BrushController.hpp  HeadController.cpp  HeadController.hpp
src/printer/: FileSelector.cpp  FileSelector.hpp  PixelProcessor.cpp  PixelProcessor.hpp  PrinterAutopos.cpp  PrinterAutopos.hpp  PrinterJob.cpp  PrinterJob.hpp  PrinterManualPos.cpp  PrinterManualPos.hpp  PrinterMenu.cpp  PrinterMenu.hpp  PrinterSettings.hpp
src/sd_card/: File.cpp  File.hpp  Storage.cpp  Storage.hpp  storage_hw.h
src/service_ptr/: AbstractService.hpp  ServiceList.hpp  ServiceLoader.hpp  ServiceManager.cpp  ServiceManager.hpp
src/utils/: string_trim.hpp
src/views/: AutoposConfirm.hpp  AutoposProgress.hpp  AxisMenu.hpp  Debug.hpp  FileMenu.hpp  MainMenu.hpp  ManualPosMenu.hpp  MessagePrinter.hpp  PrintConfirm.hpp  PrintProgress.hpp  Views.hpp
